@startuml
class User {
  <i>email</i>
  -- other --
  firstName
  lastName
  password
  info
  isAdmin
}

class Module {
  <i>id</i>
  -- FK --
  author
  -- other --
  tested
  summary
}

class Lesson {
  <i>id</i>
  -- FK --
  module
  -- other --
  quized
  content
}

class Rating {
  -- FK --
  <i>rater</i>
  <i>lesson</i>
  -- other --
  stars
}

class Invitation {
  -- FK --
  <i>module</i>
  <i>student</i>
  <i>creator</i>
}

class Enrollment {
  -- FK --
  <i>module</i>
  <i>student</i>
}

class Comment {
  <i>id</i>
  -- FK --
  module
  lesson
  author
  parent
}

class OpenQuestion {
  <i>id</i>
  -- FK --
  module
  -- other --
  question
}

class Answer {
  -- FK --
  <i>student</i>
  <i>questionId</i>
  -- other --
  answer
  comment
  mark
}

class Report {
  <i>id</i>
  -- FK --
  lesson
  module
  author
  -- other --
  issue
}

class Definition {
  -- FK --
  <i>lessonId</i>
  -- other --
  <i>term</i>
  meaning
}

class QuizQuestion {
  -- FK --
  <i>lessonId</i>
  -- other --
  <i>question</i>
  correctAnswer
}

Definition "*" -- Lesson : has <
QuizQuestion "*" -- Lesson : has <
Report "*" -- Lesson : >
Report "*" -- Module : >
Report "*" -- User : by > 
Answer -- User : by >
Answer -- OpenQuestion : to >
OpenQuestion "*" -- Module : "about content of" >
Comment "*" -- Comment : to >
Comment "*" - User : makes < 
Comment "*" -- Lesson
Enrollment -- Module : in >
Enrollment - User : of >
Invitation -- Module : to >
Invitation - User : for >
Rating -- Lesson : of >
Rating "*" - User : by >
Lesson "*" -- Module : in >
Module "*" -- User : by >
@enduml
